# simple-engine

./: CMakeLists.txt  README.md  compile  makefile
include/: GameObject.h  TextureManager.h  game_object.h  physics_manager.h
meson_fex/usr/lib/i386-linux-gnu/: liblua.so.5.4.6
meson_fex/usr/lib/i386-linux-gnu/pkgconfig/: libxml-2.0.pc
meson_fex/usr/lib/x86_64-linux-gnu/: libarchive.so.19  liblua.so.5.4.6
meson_fex/usr/share/vulkan/icd.d/: freedreno_icd.i386.json  freedreno_icd.x86_64.json
src/: GameObject.cpp  PhysicsManager.cpp  TextureManager.cpp  game_object.cpp  main.cpp  physics_manager.cpp  textures_manager.cpp
